--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
     <tr onmouseout="deepburst_stop()" onmouseover="deepburst_start()" >
       <td width="25%">
         <div class="one">
-        <div class="two" id = 'deepburst_image'><img src='images/archive1.png' , height="90", width ="185" ></div>
-        <img src='images/archive1.png', height="90", width ="185">
+        <div class="two" id = 'deepburst_image'><img src='images/archive1.PNG' , height="90", width ="185" ></div>
+        <img src='images/archive1.PNG', height="90", width ="185">
         </div>
         <script type="text/javascript">
         function deepburst_start() {
