--- a/index.html
+++ b/index.html
@@ -74,22 +74,22 @@
         <p align="center">
           <name>Simmi Mourya</name>
         </p>
-        <p>I am a Computer Science gradute student at the <a href="https://home.www.upenn.edu/">University of Pennsylvania</a>. Previously, I worked as a Software Developer/Data Scientist at <a href="https://www.esri.com/en-us/home"> ESRI</a>, New Delhi, where I explored various applications of Deep Learning in Geo Spatial Imagery and their integration in <a href="https://www.esri.com/en-us/arcgis/products/arcgis-pro/overview"> ArcGIS Python API</a>. Prior to ESRI, I contributed as a researcher at SBILab with <a href="https://www.iiitd.ac.in/anubha">Dr. Anubha Gupta </a> at <a href="https://www.iiitd.ac.in"> IIIT, Delhi</a>. Most of my research involved developing novel Deep Learning methods in the area of medical imaging.  
+        <p>I am a Computer Science gradute student at the<a href="https://home.www.upenn.edu/"> University of Pennsylvania</a>. Previously, I worked as a Software Developer/Data Scientist at <a href="https://www.esri.com/en-us/home"> ESRI</a>, New Delhi, where I explored various applications of Deep Learning in Geo Spatial Imagery and their integration in <a href="https://www.esri.com/en-us/arcgis/products/arcgis-pro/overview"> ArcGIS Python API</a>. Prior to ESRI, I contributed as a researcher at SBILab with <a href="https://www.iiitd.ac.in/anubha">Dr. Anubha Gupta </a> at <a href="https://www.iiitd.ac.in"> IIIT, Delhi</a>. Most of my research involved developing novel Deep Learning methods in the area of medical imaging.  
         </p>
         <p>
           I completed my bachelors from <a href="https://ducic.ac.in/"> Cluster Innovation Centre, University of Delhi </a> in Computer Science and Applied Mathematics. 
           There I was advised by  <a href="https://en.wikipedia.org/wiki/Samir_K._Brahmachari"> Dr. Samir K. Brahmachari </a> for my semester long project. I was also mentored by <a href="https://scholar.google.com/citations?user=NkykS9kAAAAJ&hl=en"> Dr. Shobha Bagai </a> for course projects. 
-          During my junior year, I contributed to <a href="https://github.com/simmimourya/cyvlfeat"> Cyvlfeat </a> as a Google Summer of Code intern at Portland State University. For this project, I was mentored by <a href="https://scholar.google.com/citations?user=ySHBXyAAAAAJ&hl=en"> Simon Niklaus</a>. More details of the project can be found <a href="https://gsoc2016.wordpress.com/"> here</a>. I also mentored some pre-University students for the Google Code-In program for Apache Mifos Initiative project. I spent half of my senior year at Pitney Bowes as a Data Science Intern.  
+          During my junior year, I contributed to <a href="https://github.com/simmimourya/cyvlfeat"> Cyvlfeat </a> as a  <a href="https://summerofcode.withgoogle.com/">Google Summer of Code</a> intern at Portland State University. For this project, I was advised by <a href="https://scholar.google.com/citations?user=ySHBXyAAAAAJ&hl=en"> Simon Niklaus</a>. More details of the project can be found <a href="https://gsoc2016.wordpress.com/"> here</a>. I also mentored some pre-University students for the <a href="https://codein.withgoogle.com"/>Google Code-In</a> program for the Apache Mifos Initiative project. I spent half of my senior year at <a href="https://www.pitneybowes.com/us"> Pitney Bowes</a> as a Data Science Intern.  
 
         </p>
         <p align=center>
           <a href="mailto:simmim@seas.upenn.edu">Email</a> &nbsp/&nbsp
-          <a href="data/Simmi_Mourya_Resume_Jan2020.pdf">CV</a> &nbsp/&nbsp
+          <a href="data/Data_Science_Resume_Simmi_Mourya_web.pdf">CV</a> &nbsp/&nbsp
           <a href="https://scholar.google.co.in/citations?hl=en&user=IJIw5toAAAAJ&scilu=&scisig=AMD79ooAAAAAXnE84wOrm4sIZHxHif_EMErjhdkY9gSO&gmla=AJsN-F4sno09awOiquRRh_4ZapyldWyxfhailoQoW7SoQMrRrP2QHbE-j40ZpBCeeAOrM8R4huVsoDytfehmbmdwmWVGVsmX0lLAY1LaaMk5VYbzzNfflGw&sciund=4005642563066408935">Google Scholar</a> &nbsp/&nbsp
           <a href="https://www.linkedin.com/in/simmi-mourya-34406886"> LinkedIn </a>  &nbsp/&nbsp
           <a href="https://github.com/simmimourya"> Github </a>  &nbsp/&nbsp
-          <!-- <a href="https://github.com/simmimourya"> Social </a> -->
           <a href="https://medium.com/@simmimourya/highlights"> Medium </a>
+<!-- 	<a href="https://github.com/simmimourya"> Social </a> -->
         </p>
         </td>
         <td width="33%">
