update resume and add project section

--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
         </p>
         <p align=center>
           <a href="mailto:simmim@seas.upenn.edu">Email</a> &nbsp/&nbsp
-          <a href="data/Data_Science_Resume_Simmi_Mourya_web.pdf">CV</a> &nbsp/&nbsp
+          <a href="data/SDE_Resume_Simmi_Mourya_web.pdf">CV (SDE) </a> &nbsp/&nbsp
+	  <a href="data/DS_Resume_Simmi_Mourya_web.pdf">CV (DS) </a> &nbsp/&nbsp
           <a href="https://scholar.google.co.in/citations?hl=en&user=IJIw5toAAAAJ&scilu=&scisig=AMD79ooAAAAAXnE84wOrm4sIZHxHif_EMErjhdkY9gSO&gmla=AJsN-F4sno09awOiquRRh_4ZapyldWyxfhailoQoW7SoQMrRrP2QHbE-j40ZpBCeeAOrM8R4huVsoDytfehmbmdwmWVGVsmX0lLAY1LaaMk5VYbzzNfflGw&sciund=4005642563066408935">Google Scholar</a> &nbsp/&nbsp
           <a href="https://www.linkedin.com/in/simmi-mourya-34406886"> LinkedIn </a>  &nbsp/&nbsp
           <a href="https://github.com/simmimourya"> Github </a>  &nbsp/&nbsp
@@ -97,7 +98,27 @@
         </td>
       </tr>
       </table>
-      <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+      
+	  
+<table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+      <tr>
+        <td width="100%" valign="middle">
+          <heading>Software Projects</heading>
+          <p>
+	<b>Multi-threaded web server and Service framework:</b>
+      A Java based web \textbf{HTTP 1.1 compliant web server developed from scratch. Later merged it with a custom-built web service framework which emulates the behaviour of Java Spark. Key services implemented: Route registration, Session/Cookie management, Filter handler, Query Parameters handling, Request and Response handlers.
+         
+	<b> Web crawler and XPath Engine:</b>
+	 Developed amultithreaded web crawlerwith a custom XPath Parser and to query andstore matched HTML, XML documents into a persistent data store.  Also developing aMap-Reduced Based Indexerfromscratch which will later be integrated with a custom crawler, Page-Rank module and Search Engine UI. Learning Amazon EMR,S3, RDS, EBS. (Team size:  4)
+	</p>
+        </td>
+      </tr>
+      </table>
+	  
+
+	  
+	  
+<table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
       <tr>
         <td width="100%" valign="middle">
           <heading>Research</heading>
@@ -107,7 +128,8 @@
         </td>
       </tr>
       </table>
-
+	  
+	  
   <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
 
 
