--- a/index.html
+++ b/index.html
@@ -112,7 +112,14 @@
 		  
 	<b> Web crawler and XPath Engine:</b>
 	 Developed amultithreaded web crawlerwith a custom XPath Parser and to query andstore matched HTML, XML documents into a persistent data store.  Also developing aMap-Reduced Based Indexerfromscratch which will later be integrated with a custom crawler, Page-Rank module and Search Engine UI. Learning Amazon EMR,S3, RDS, EBS. (Team size:  4)
-	</p>
+	<br>
+	<br>
+		  
+		  <b> <a href="https://github.com/simmimourya/cyvlfeat">Cyvlfeat </a>:</b>
+	Designed and developed 12 new features for a high-performance Python/Cython wrapper of computer vision library, VLFeat. (Added algorithms specializing in image understanding and local features extraction and matching such as LBP, SIFT, hierarchical k-means, SLIC).
+	<br>
+		  Project progess over a period of three months was documented in this <a href="https://gsoc2016.wordpress.com/">blog </a>.
+		</p>
         </td>
       </tr>
       </table>
