--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
           I completed my bachelors from <a href="https://ducic.ac.in/"> Cluster Innovation Centre, University of Delhi </a> in Computer Science and Applied Mathematics. 
           There I was advised by  <a href="https://en.wikipedia.org/wiki/Samir_K._Brahmachari"> Dr. Samir K. Brahmachari </a> for my semester long project. I was also mentored by <a href="https://scholar.google.com/citations?user=NkykS9kAAAAJ&hl=en"> Dr. Shobha Bagai </a> for course projects. 
           During my junior year, I contributed to <a href="https://github.com/simmimourya/cyvlfeat"> Cyvlfeat </a> as a  <a href="https://summerofcode.withgoogle.com/">Google Summer of Code</a> intern at Portland State University. For this project, I was advised by <a href="https://scholar.google.com/citations?user=ySHBXyAAAAAJ&hl=en"> Simon Niklaus</a>. More details of the project can be found <a href="https://gsoc2016.wordpress.com/"> here</a>. I also mentored some pre-University students for the <a href="https://codein.withgoogle.com"/>Google Code-In</a> program for the Apache Mifos Initiative project. I spent half of my senior year at <a href="https://www.pitneybowes.com/us"> Pitney Bowes</a> as a Data Science Intern.  
-
+		
+	  
         </p>
         <p align=center>
           <a href="mailto:simmim@seas.upenn.edu">Email</a> &nbsp/&nbsp
@@ -106,7 +107,7 @@
           <heading>Software Projects</heading>
           <p>
 	
-	<b>Multi-threaded web server and Service framework:</b>
+	<b>Search <a href="https://github.com/simmimourya/simmimourya.github.io/blob/master/cis555report.docx.pdf"> Engine </a> :</b>
 		The main goal of this project was to build a scalable web crawler hosted on Amazon AWS complete with a crawler, indexer, pagerank, and a front end.        
 		1. To have a functioning, reasonable search engine which retrieved relevant pages.
 		2. Create meaningful indexes and page rank scores for all the webpages crawled.
