--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <heading>Software Projects</heading>
           <p>
 	
-	<b>Search <a href="https://github.com/simmimourya/simmimourya.github.io/blob/master/cis555report.docx.pdf"> Engine </a> :</b>
+	<b><a href="https://github.com/simmimourya/simmimourya.github.io/blob/master/cis555report.docx.pdf">Search Engine </a> :</b>
 		The main goal of this project was to build a scalable web crawler hosted on Amazon AWS complete with a crawler, indexer, pagerank, and a front end.        
 		1. To have a functioning, reasonable search engine which retrieved relevant pages.
 		2. Create meaningful indexes and page rank scores for all the webpages crawled.
