update project title

--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@ score of 54.02 on the test set. With some extensions, we were able to boost the 
   <br>
 
 
-    <b> <a href="data/CIS_520_project_report.pdf"> Cross Lingual NER using Multilingual Word Embeddings: </a></b>
+    <b> <a href="data/CIS_520_project_report.pdf"> Inferring Cuisines from Cooking Recipe
+Descriptions: </a></b>
   In this project, we aim to predict the cuisine of the dish based on the constituents of this dish.The data for the project is from Kaggle (What’s
 cooking?) and consists of ingredients (in text form) and the corresponding cuisine. We implement natural language processing techniques to
 effectively vectorize the words for performing downstream tasks like classification. We find that TF-IDF with RBF-kernel based SVM yields the
