--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
           <p>
 	
 	<b><a href="data/cis555report.docx.pdf">Search Engine </a> :</b>
-		The main goal of this project was to build a scalable web crawler hosted on Amazon AWS complete with a crawler, indexer, pagerank, and a front end. (Team size:  4)       
+		The main goal of this project was to build a scalable web crawler hosted on Amazon AWS complete with a crawler, indexer, pagerank, and a front end.       
 		1. To have a functioning, reasonable search engine which retrieved relevant pages.
 		2. Create meaningful indexes and page rank scores for all the webpages crawled.
-		Worked majorly on running and scaling Indexer. DevOps for Gradle, EMR, Hadoop, EMRFS. Minor Hadoop DevOps for PageRank. 
+		I worked majorly on running and scaling Indexer. Also worked on DevOps for Gradle, EMR, Hadoop, EMRFS and minor Hadoop DevOps for PageRank. (Team size:  4)
 		  
 	<br>
 	<br>
@@ -147,7 +147,7 @@ higher classification accuracy. (Team size:  3)
 
   <b><a href="data/680_Report_RL.pdf"> Reinforcement Learning using the CarRacing-v0
 environment from OpenAI Gym </a> :</b>
-      In this project we implement and evaluate various reinforcement learning methods to train the agent for OpenAI- Car Racing-v0 game environment. Our current method explores Fully connected Deep Q-network and achieves an average reward of 210.92 for 10 evaluation steps. We train our best performing model which contains 70,475 paramaters for 570 episodes.
+      In this project we implement and evaluate various reinforcement learning methods to train the agent for OpenAI- Car Racing-v0 game environment. Our current method explores Fully connected Deep Q-network and achieves an average reward of 210.92 for 10 evaluation steps. We train our best performing model which contains 70,475 paramaters for 570 episodes. (Team size:  2)
          <br>
   <br>
 
