--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
   <b> <a href="data/530_project_report.pdf"> Cross Lingual NER using Multilingual Word Embeddings: </a></b>
   In this project we implement and evaluate various cross lingual NER models using bilingual
 and multilingual word embeddings. Our current method explores the use of a bi-LSTM deep neural
-network model in the NER task. Our reimplementation of the published baseline in [15] achieves an F1
+network model in the NER task. Our reimplementation of the published baseline in achieves an F1
 score of 54.02 on the test set. With some extensions, we were able to boost the F1 score to 63.70.
  (Team size:  4)
   <br>
