--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
           <a href="https://scholar.google.co.in/citations?hl=en&user=IJIw5toAAAAJ&scilu=&scisig=AMD79ooAAAAAXnE84wOrm4sIZHxHif_EMErjhdkY9gSO&gmla=AJsN-F4sno09awOiquRRh_4ZapyldWyxfhailoQoW7SoQMrRrP2QHbE-j40ZpBCeeAOrM8R4huVsoDytfehmbmdwmWVGVsmX0lLAY1LaaMk5VYbzzNfflGw&sciund=4005642563066408935">Google Scholar</a> &nbsp/&nbsp
           <a href="https://www.linkedin.com/in/simmi-mourya-34406886"> LinkedIn </a>  &nbsp/&nbsp
           <a href="https://github.com/simmimourya"> Github </a>  &nbsp/&nbsp
-          <a href="https://medium.com/@simmimourya/highlights"> Medium </a>
+          <a href="https://medium.com/@simmimourya/highlights"> Medium </a>  &nbsp/&nbsp
+	  <a href="https://simmimourya.wixsite.com/photo"> Photography </a> &nbsp/&nbsp
+	  <a href="https://simmimourya.wixsite.com/photo/beatrice-fihn"> Published Work </a>
 <!-- 	<a href="https://github.com/simmimourya"> Social </a> -->
         </p>
         </td>
