--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
           <a href="https://github.com/simmimourya"> Github </a>  &nbsp/&nbsp
           <a href="https://medium.com/@simmimourya/highlights"> Medium </a>  &nbsp/&nbsp
 	  <a href="https://simmimourya.wixsite.com/photo"> Photography </a> &nbsp/&nbsp
-	  <a href="https://simmimourya.wixsite.com/photo/beatrice-fihn"> Published Work </a>
-	  <a href="https://github.com/simmimourya/simmimourya.github.io/blob/master/data/re-pair.pdf"> Philanthropy </a>
+	  <a href="https://simmimourya.wixsite.com/photo/beatrice-fihn"> Published Work </a> &nbsp/&nbsp
+	  <a href="https://github.com/simmimourya/simmimourya.github.io/blob/master/data/re-pair.pdf"> Philanthropy </a> &nbsp/&nbsp
 <!-- 	<a href="https://github.com/simmimourya"> Social </a> -->
         </p>
         </td>
