--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
         </p>
         <p align=center>
           <a href="mailto:simmim@seas.upenn.edu">Email</a> &nbsp/&nbsp
-          <a href="data/SDE_Resume_Simmi_Mourya_web.pdf">CV (SDE) </a> &nbsp/&nbsp
+<!--           <a href="data/SDE_Resume_Simmi_Mourya_web.pdf">CV (SDE) </a> &nbsp/&nbsp
 	  <a href="data/Simmi_Mourya_Resume_AS_2024.pdf">CV (DS) </a> &nbsp/&nbsp
-          <a href="https://scholar.google.co.in/citations?hl=en&user=IJIw5toAAAAJ&scilu=&scisig=AMD79ooAAAAAXnE84wOrm4sIZHxHif_EMErjhdkY9gSO&gmla=AJsN-F4sno09awOiquRRh_4ZapyldWyxfhailoQoW7SoQMrRrP2QHbE-j40ZpBCeeAOrM8R4huVsoDytfehmbmdwmWVGVsmX0lLAY1LaaMk5VYbzzNfflGw&sciund=4005642563066408935">Google Scholar</a> &nbsp/&nbsp
+          <a href="https://scholar.google.co.in/citations?hl=en&user=IJIw5toAAAAJ&scilu=&scisig=AMD79ooAAAAAXnE84wOrm4sIZHxHif_EMErjhdkY9gSO&gmla=AJsN-F4sno09awOiquRRh_4ZapyldWyxfhailoQoW7SoQMrRrP2QHbE-j40ZpBCeeAOrM8R4huVsoDytfehmbmdwmWVGVsmX0lLAY1LaaMk5VYbzzNfflGw&sciund=4005642563066408935">Google Scholar</a> &nbsp/&nbsp -->
           <a href="https://www.linkedin.com/in/simmi-mourya-34406886"> LinkedIn </a>  &nbsp/&nbsp
           <a href="https://github.com/simmimourya"> Github </a>  &nbsp/&nbsp
           <a href="https://medium.com/@simmimourya/highlights"> Medium </a>  &nbsp/&nbsp
